src/test/fail/basic_syntax/brace_outside_block.lly
#[
SyntaxError: '}' outside of a block.
Where: File "brace_outside_block.lly" at line 6
]#

}
